# Ride_Analytics

./: README.md
Uber_Data_Engineer_Project-main/: api.py  connection.py  pyproject.toml  requirements.txt
Uber_Data_Engineer_Project-main/Code_Files/: bronze_adls.ipynb  ingest.py  silver.py  silver_obt.sql
Uber_Data_Engineer_Project-main/templates/: confirmation.html  home.html
